@@ -156,9 +156,6 @@
 /* Define to 1 if you have the <memory.h> header file. */
 #undef HAVE_MEMORY_H
 
-/* Define to 1 if you have the `mkstemp' function. */
-#undef HAVE_MKSTEMP
-
 /* Define to 1 if you have a `mmap' system call which handles coherent file
    I/O. */
 #undef HAVE_MMAP_FILEIO
